Revise CV content and add Shopify/WooCommerce skills
Updated the HTML content for the CV of Elena González, including professional profile, experience, education, certifications, skills, languages, and projects. Added management of Shopify and WooCommerce stores.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <address>
       <p>Salamanca, España</p>
       <p>Email: <a href="mailto:eglezplz@gmail.com">eglezplz@gmail.com</a></p>
-      <p>Teléfono: +34 616 512 281</p>
+      <p>Teléfono: <a href="tel:+34616512281">+34 616 512 281</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/elenaglezplz" target="_blank" rel="noopener noreferrer">linkedin.com/in/elenaglezplz</a></p>
       <p>GitHub: <a href="https://github.com/EGLez1312" target="_blank" rel="noopener noreferrer">github.com/EGLez1312</a></p>
     </address>
@@ -35,7 +35,7 @@
   <main>
     <section id="perfil">
       <h2>Perfil profesional</h2>
-      <p>Recientemente titulada con amplia experiencia en administración de plataformas web, servidores y bases de datos y formación continua en ciberseguridad e IA. Especializada en Java, Python, Android y SQL, con capacidad para integrarse en equipos multidisciplinares y gestionar soluciones seguras y escalables.</p>
+      <p>Recientemente titulada con amplia experiencia en administración de plataformas web, servidores y bases de datos y formación continua en ciberseguridad e IA. Estoy especializada en Java, Python, Android y SQL, con capacidad para integrarme en equipos multidisciplinares y gestionar soluciones seguras y escalables.</p>
     </section>
 
     <section id="experiencia">
@@ -45,9 +45,10 @@
         <p class="empresa-fecha">[febrero/2021 – octubre/2025]</p>
         <ul>
           <li>Gestión y administración integral de la web corporativa en WordPress, asegurando óptimo rendimiento y actualización permanente.</li>
-          <li>Administración del servidor y base de datos MySQL, resolución de incidencias técnicas, backups y políticas de seguridad, alojados en Siteground.</li>
+          <li>Administración del servidor y base de datos MySQL, resolución de incidencias técnicas, backups, staging y políticas de seguridad, alojados en Siteground.</li>
           <li>Colaboración con equipos de diseño, marketing y ventas para implementar mejoras técnicas e integraciones web.</li>
           <li>Implementación de buenas prácticas de seguridad y protección de datos en el ecosistema digital.</li>
+          <li>Gestión de tiendas con Shopify y WooCommerce</li>
         </ul>
       </article>
     </section>
@@ -78,10 +79,14 @@
         <li>Python, Java, Bash, PowerShell</li>
         <li>Administración avanzada de Linux (Ubuntu, Kali) y Windows 10/11</li>
         <li>Gestión de redes, DHCP, cortafuegos</li>
+        <li>Gestión de servidores web</li>
         <!-- <li>Pentesting básico y herramientas de análisis (Nmap, Wireshark, Burp Suite)</li> -->
         <li>Desarrollo Android con Android Studio</li>
-        <li>Desarrollo web con HTML, CSS, JavaScript, WordPress</li>
+        <li>Desarrollo web con HTML, CSS, JavaScript, Wordpress</li>
+        <li>Desarrollo seguro en entornos de test y posterior pase a producción</li>
+        <li>Gestión de tiendas con Shopify y WooCommerce</li>
         <li>Control de versiones con Git y GitHub</li>
+        <li>Staging</li>
         <li>Manejo de bases de datos: MySQL, SQL Server</li>
       </ul>
       <h3>Herramientas de Inteligencia Artificial</h3>
@@ -232,6 +237,7 @@
 
 </body>
 </html>
+
 
 
 
