Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <main>
     <section id="profile">
       <h2>Professional Profile</h2>
-      <p>Recently graduated with extensive experience in managing web platforms, servers, and databases, with ongoing training in cybersecurity and AI. Specialized in Java, Python, Android, and SQL, able to integrate into multidisciplinary teams and manage secure and scalable solutions.</p>
+      <p>Recently qualified, with extensive experience in web platform, server and database administration, and ongoing training in cybersecurity and AI. I specialise in Java, Python, Android and SQL, with the ability to integrate into multidisciplinary teams and manage secure and scalable solutions.</p>
     </section>
 
     <section id="experience">
@@ -155,9 +155,10 @@
         <p class="company-date">[February/2021 – October/2025]</p>
         <ul>
           <li>Comprehensive management and administration of the corporate website in WordPress, ensuring optimal performance and continuous updates.</li>
-          <li>Administration of the server and MySQL database, troubleshooting technical issues, backups, and security policies, hosted on Siteground.</li>
+          <li>Administration of the server and MySQL database, troubleshooting technical issues, backups, staging and security policies, hosted on Siteground.</li>
           <li>Collaboration with design, marketing, and sales teams to implement technical improvements and web integrations.</li>
           <li>Implementation of best security practices and data protection in the digital ecosystem.</li>
+          <li>Shop management with Shopify and WooCommerce</li>
         </ul>
       </article>
     </section>
@@ -190,7 +191,10 @@
         <li>Network Management, DHCP, Firewalls</li>
         <li>Android Development with Android Studio</li>
         <li>Web Development with HTML, CSS, JavaScript, WordPress</li>
+        <li>Secure development in test environments and subsequent transfer to production</li>
+        <li>Shop management with Shopify and WooCommerce</li>
         <li>Version Control with Git and GitHub</li>
+        <li>Staging</li>
         <li>Database Management: MySQL, SQL Server</li>
       </ul>
       <h3>Artificial Intelligence Tools</h3>
@@ -237,6 +241,7 @@
 
 </body>
 </html>
+
 
 
 
