Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <address>
       <p>Salamanca, Spain</p>
       <p>Email: <a href="mailto:eglezplz@gmail.com">eglezplz@gmail.com</a></p>
-      <p>Phone: +34 616 512 281</p>
+      <p>Phone: <a href="tel:+34616512281">+34 616 512 281</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/elenaglezplz" target="_blank" rel="noopener noreferrer">linkedin.com/in/elenaglezplz</a></p>
       <p>GitHub: <a href="https://github.com/EGLez1312" target="_blank" rel="noopener noreferrer">github.com/EGLez1312</a></p>
     </address>
@@ -241,6 +241,7 @@
 
 </body>
 </html>
+
 
 
 
