--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <p>Salamanca, Spain</p>
       <p>Email: <a href="mailto:eglezplz@gmail.com">eglezplz@gmail.com</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/elenaglezplz" target="_blank" rel="noopener noreferrer">linkedin.com/in/elenaglezplz</a></p>
-      <p>GitHub: <a href="https://github.com/EGLez1312" target="_blank" rel="noopener noreferrer">github.com/EGLez1312</a></p>
+      <p>GitHub: <a href="https://github.com/EGLez1312" target="_blank" rel="noopener noreferrer">github.com/EGlezPlz</a></p>
     </address>
   </header>
 
@@ -239,6 +239,7 @@
 
 </body>
 </html>
+
 
 
 
